fixed overflow issue on mobile

--- a/scss/parts/_client.scss
+++ b/scss/parts/_client.scss
@@ -2,6 +2,9 @@
 
 aside.clients {
 
+	overflow: hidden;
+	overflow-y: auto;
+
     img {
         margin: 50px auto;
     }
